// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picture renders 1`] = `
<img
  className="wrapper"
  description="A sample test image"
  loading="auto"
  sizes=""
  src="//placehold.it/200x200"
  srcSet=""
/>
`;

exports[`Picture renders a lazy-load variant 1`] = `
<img
  className="wrapper"
  dataSrc="//placehold.it/200x200"
  dataSrcSet="//placehold.it/400x400 400w, //placehold.it/600x600 600w"
  description="Test"
  loading="auto"
  sizes=""
/>
`;
